//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Technician {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  cat Categorie
  catID String [not null]
  role String [not null]
}

Table Categorie {
  id String [pk]
  name String [not null]
  technicians Technician [not null]
  tickets Ticket [not null]
}

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  tickets Ticket [not null]
  role String [not null]
}

Table Ticket {
  disscusions Disscusion [not null]
  id String [pk]
  author User
  authorID String [not null]
  cat Categorie
  catID String [not null]
  closed Boolean [not null]
}

Ref: Technician.catID > Categorie.id

Ref: Ticket.authorID > User.id

Ref: Ticket.catID > Categorie.id